# gnome-meme-generator

./: .gitignore  PKGBUILD  README.md  archlinux-install.sh  deb-build.sh  dpkg-build.sh  install-archlinux.sh  io.github.vani1_2.memerist.yml  memerist.spec  meson.build  org.gnome.Example.json
.copr/: Makefile
.github/workflows/: build-deb.yml
data/: io.github.vani1_2.memerist.metainfo.xml.in  io.github.vani1_2.memeristt.metainfo.xml.in  io.github.vani_tty1.memerist.desktop.in  io.github.vani_tty1.memerist.gschema.xml  io.github.vani_tty1.memerist.metainfo.xml.in  meson.build  org.gnome.Memerist.desktop.in
data/icons/: meson.build
deb-build/: memerist-amd64.deb
deb-build/memerist-amd64/DEBIAN/: control
po/: POTFILES.in
scripts/: dpkg-build.sh  install-archlinux.sh  install-deb.sh
src/: main.c  meme-core.c  meme-core.h  meme-renderer.c  meme-renderer.h  meson.build  myapp-application.c  myapp-window.c  myapp-window.ui  myapp.gresource.xml
